# ProductService/ProductService/openapi_v1.json
@@ -2,12 +2,12 @@
   "x-generator": "NSwag v13.8.2.0 (NJsonSchema v10.2.1.0 (Newtonsoft.Json v9.0.0.0))",
   "openapi": "3.0.0",
   "info": {
-    "title": "Product Service",
+    "title": "Product Service (1.8.0)",
     "description": "Manages products and their metadata.",
-    "version": "1.0.0"
+    "version": "1.8"
   },
   "paths": {
-    "/api/products": {
+    "/api/v1/products": {
       "get": {
         "tags": [
           "Products"
@@ -40,7 +40,7 @@
         }
       }
     },
-    "/api/products/{productId}": {
+    "/api/v1/products/{productId}": {
       "get": {
         "tags": [
           "Products"
